
- "scripts/" folder clean-up
 -> Removed "format" folder, as this is now incorporated into first step of pipeline

- Incoporate external scripts
 -> "x11_fix.sh" is now located in "META_ANALYSIS/scripts/" and README.md has been updated accordingly
 -> "1_scan_buckets.sh" is now located in "META_ANALYSIS/scripts/" and README.md has been updated accordingly

- Munge step input generation script
 -> "generate_munge_input.sh" added to "META_ANALYSIS/scripts/" folder and can be run using "script/generate_munge_input.sh JOBID [JOBID2 JOBID3 ...]" 
 -> automatically creates "data/DF2/step2_munge.txt"
 -> README.md updated to incorporate use of this script

- README.md update
 -> Replaced instances of the date "20220331" with "[YYYYMMDD]" to make it clearer that users need to input their own dates
 -> Edited the steps in 1.3 so that the input files "step3_sumstats_loc.txt" and "step3_pheno_conf.txt" are generated using the same phenotype order, as if they are not, the pipeline will break



### 2022/04/20

Fix 1:
- "format.wdl" -> if the file format was SAIGE, the whole file was re-bgzipped, but now only the required columns are extracted (in a similar fashion to the other formats)

Fix 2:
- "munge.json" 
 -> added "info_col", "min_maf" and "min_info" inputs for the "clean_filter" task
- "munge.wdl": "clean_filter" task
 -> added variable definitions for "info_col", "min_maf" and "min_info"
 -> changed AF filter from >0 to >=min_maf and added INFO>=min_info filter

Fix 3:
- "generate_makejson_input.sh"
 -> script edited to add three extra fields to the .json files: "af_alt" and "info", so that these can be incorporated into the meta_analysis.py script
 -> summary stats are used from "lift_postprocess" task instead of "harmonize", as "N" column is duplicated in "harmonize" task (which may break things later on in the pipeline)
 -> tweaked the awk commands to make them more efficient
 -> script moved to "scripts" subfolder and README.md updated to account for this move